--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-transformers==4.13.0
+transformers
 nltk
 datasets
 wandb
@@ -7,5 +7,5 @@ bert_score
 py7zr
 metrics
 evaluate
-accelerate --upgrade
-spacy --upgrade
+accelerate
+spacy
