--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-transformers==4.13.0
+transformers
 nltk
 datasets
 wandb
@@ -10,5 +10,4 @@ evaluate
 accelerate
 spacy
 tk
-sacremoses
-sentencepiece
+gensim
